<resources>
    <string name="pressedOnce">Press again to exit</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_main_information">@string/title_Information</string>
    <string name="nav_main_history">@string/title_history</string>
    <string name="nav_main_reports">@string/title_reports</string>
    <string name="nav_main_reminder">@string/title_reminder</string>
    <string name="nav_main_comparison">@string/title_comparison</string>
    <string name="nav_main_crash">@string/title_crash</string>
    <string name="nav_main_aidTips">@string/title_firstaidTips</string>
    <string name="nav_main_settings">@string/title_settings</string>
    <string name="nav_main_about">@string/title_about</string>
    <string name="nav_main_legal_details">@string/title_imprint</string>
    <string name="nav_main_privacy">@string/title_privacy</string>
    <string name="nav_main_addCar">Add Vehicle</string>
    <string name="title_Information">Information</string>
    <string name="title_history">History</string>
    <string name="title_reports">Reports</string>
    <string name="title_reminder">Reminder</string>
    <string name="title_comparison">Fuel price comparison</string>
    <string name="title_crash">Crash</string>
    <string name="title_firstaidTips">First aid tips</string>
    <string name="title_settings">Settings</string>
    <string name="title_about">About</string>
    <string name="title_imprint">Legal details</string>
    <string name="title_privacy">Privacy Statement</string>
    <string name="title_refuel">Refuelling</string>
    <string name="title_service">Maintenance</string>
    <string name="title_activity_select_list">Choose Item</string>
    <string name="title_vehicle">Vehicle</string>
    <string name="title_insurancePolicy">Insurance Policy</string>
    <string name="title_fuel_setting">Settings</string>
    <string name="title_new_vehicle">Add Vehicle</string>
    <string name="title_new_insurancePolicy">Add Insurance Policy</string>
    <string name="title_new_refuel">Add Refuel</string>
    <string name="title_new_crash">Add Crash</string>
    <string name="title_new_service">Add Maintenance</string>
    <string name="title_notification">Notification</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Select app to share</string>
    <string name="action_finish">Finish</string>
    <string name="action_vehicleData_twoTank">Two Tanks</string>
    <string name="action_vehicleData_oneTank">One Tank</string>
    <string name="settings_section_notifications">App notifications</string>
    <string name="settings_section_permissions">Permissions</string>
    <string name="settings_section_reset">Reset data</string>
    <string name="msg_leaglDisclosure"><![CDATA[<h1>Legal Disclosure</h1>
        Information in accordance with Section 5 TMG
        <br /><br />
        <h2>Contact Information</h2>
        <br />Musterstraße 00<br />012345 Musterort<br />
        Telephone: Musterphone<br />Fax: Musterfax<br />E-Mail: <a href="mailto:Mustermail@muster.com">Mustermail@muster.com</a>
        <br />Internet address: <a href="Musterwebseite" target="_blank">Musterwebseite</a><br />
        <br /><h2>Graphics and Image Sources</h2>
        History-Background: Photo by Gary Butterfield on Unsplash <a href="https://unsplash.com/photos/KnvWL12-28Y">https://unsplash.com/photos/KnvWL12-28Y</a>
        <br /><br />
        <h2>API</h2>
        Data for the tank overview obtained from Tankerkönig - <a href="https://creativecommons.tankerkoenig.de">https://creativecommons.tankerkoenig.de</a>
        <br /><br />
        <h2>Disclaimer</h2>Accountability for content<br />
        The contents of our pages have been created with the utmost care. However, we cannot guarantee the contents
        accuracy, completeness or topicality. According to statutory provisions, we are furthermore responsible for
        our own content on these web pages. In this matter, please note that we are not obliged to monitor
        the transmitted or saved information of third parties, or investigate circumstances pointing to illegal activity.
        Our obligations to remove or block the use of information under generally applicable laws remain unaffected by this as per §§ 8 to 10 of the Telemedia Act (TMG).
        <br /><br />Accountability for links<br />
        Responsibility for the content of
        external links (to web pages of third parties) lies solely with the operators of the linked pages. No violations were
        evident to us at the time of linking. Should any legal infringement become known to us, we will remove the respective
        link immediately.<br /><br />Copyright<br /> Our web pages and their contents are subject to German copyright law. Unless
        expressly permitted by law, every form of utilizing, reproducing or processing
        works subject to copyright protection on our web pages requires the prior consent of the respective owner of the rights.
        Individual reproductions of a work are only allowed for private use.
        The materials from these pages are copyrighted and any unauthorized use may violate copyright laws.
        <br /><br />
        <i>Quelle: </i><a href="http://www.translate-24h.de" target="_blank">Übersetzungsdienst translate-24h.de</a> <br /><br />]]>
    </string>
    <string name="desc_local">Location</string>
    <string name="desc_maintenance">Maintenance</string>
    <string name="desc_odometer">Odometer</string>
    <string name="desc_cost">Cost</string>
    <string name="desc_dropDown_addCar">Drop Down add Car</string>
    <string name="desc_addPhoto">Add a photo of your vehicle</string>
    <string name="desc_hint_vehicleType">@string/edit_hint_vehicleType</string>
    <string name="desc_hint_vehicleName">@string/edit_hint_vehicleName</string>
    <string name="desc_hint_vehicleManufacture">@string/edit_hint_manufacture</string>
    <string name="desc_hint_vehicleModel">@string/edit_hint_vehicleModel</string>
    <string name="desc_hint_vehicleChassisNumber">@string/edit_hint_vehicleChassisNumber</string>
    <string name="desc_hint_vehicleLicensePlate">@string/edit_hint_vehicleLicensePlate</string>
    <string name="desc_hint_vehicleTank">Fuel Type</string>
    <string name="desc_hint_vehicleTankCapacity">@string/edit_hint_vehicleTankCapacity</string>
    <string name="desc_edit_car">Edit Car</string>
    <string name="desc_text_item">Select suitable item</string>
    <string name="value_money">$ %s</string>
    <string name="value_date">%2$s.%3$s.%1$s</string>
    <string name="value_time">%1$s:%2$s</string>
    <string name="edit_carType">Car</string>
    <string name="edit_helper_required">Required</string>
    <string name="edit_hint_vehicleType">Vehicle Type</string>
    <string name="edit_hint_vehicleName">Vehicle Name*</string>
    <string name="edit_hint_manufacture">Manufacture</string>
    <string name="edit_hint_vehicleModel">Model</string>
    <string name="edit_hint_vehicleChassisNumber">Chassis Number</string>
    <string name="edit_hint_vehicleLicensePlate">License Plate</string>
    <string name="edit_hint_vehicleTank">Fuel Type</string>
    <string name="edit_hint_vehicleTankCapacity">Capacity*</string>
    <string name="error_startActivit">Could not start the activity %s</string>
    <string name="error_carType">Error when selecting the vehicle type</string>
    <string name="error_carTankCapacity">Error</string>
    <string name="error_carLicensePlate">Error</string>
    <string name="error_carName">Error</string>
    <string name="edit_hint_contactName">Name</string>
    <string name="desc_contactName">Name</string>
    <string name="desc_contactSurename">Surename</string>
    <string name="edit_hint_contactSurename">Surename</string>
    <string name="desc_phone">Telefonnumber</string>
    <string name="edit_hint_phone">Telefonnumber</string>
    <string name="desc_email">E-Mail</string>
    <string name="edit_hint_email">E-Mail</string>
    <string name="desc_adress">Address</string>
    <string name="edit_hint_adress">Address</string>
    <string name="desc_policyName">Insurance Policy Name</string>
    <string name="edit_hint_policyName">Insurance Policy Name</string>
    <string name="desc_policyNumber">Insuracne Policy Number</string>
    <string name="edit_hint_policyNumber">Insuracne Policy Number</string>
    <string name="title_dialogPhoto">Change photo</string>
    <string name="action_takePhoto">Take photo</string>
    <string name="action_choosePhoto">Choose photo</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_removePhoto">Remove Photo</string>
    <string name="action_takePhotoNew">Take new photo</string>
    <string name="action_choosePhotoNew">Select new photo</string>
    <string name="fuell_dialog">Dialog Title</string>
    <string name="title_openGallery">Select Picture</string>
    <string name="error_openGallery">Gallery could not be opened</string>
    <string name="action_ok">OK</string>
    <string name="title_backDialog">Cancel</string>
    <string name="msg_backDialog">Would you like to cancel the process?</string>
    <string name="error_email">Enter empty field or correct e-mail address</string>
    <string name="db_tabele_create">Table %s was created</string>
    <string name="db_insert">Value successfully generated</string>
    <string name="db_start">Database was started</string>
    <string name="error_loadCarData">Unfortunately the data could not be loaded</string>
    <string name="msg_exitApp">No vehicle has been created yet and by aborting this task, the app is terminated. Are you sure?</string>
    <string name="error_gpsPermission">You may not use this service to its full extent without permission to locate the site!</string>
    <string name="dialog_title_gpsDialog">GPS not activated</string>
    <string name="dialog_msg_gpsDialog">Please activate your GPS in the settings to be able to use the service!</string>
    <string name="error_gpsPermission_infoText">To use the service, you need to allow us to retrieve your GPS coordinates.</string>
    <string name="error_gpsEnabe_infoText">Please activate your GPS in the settings to be able to use the service!</string>
    <string name="button_gps_permission">Allow GPS</string>
    <string name="button_gps_enable">Enable GPS</string>
    <string name="button_get_petrol_station">GET PETROL STATION</string>
    <string name="error_internet">Sorry, there seems to be a problem with the internet. This prevents us from accessing the service.\n\nJust try again in a few minutes.</string>
    <string name="desc_hint_odometer">Odometer</string>
    <string name="edit_hint_odometer">Odometer*</string>
    <string name="edit_hint_date">Date</string>
    <string name="desc_date">Date</string>
    <string name="desc_time">Time</string>
    <string name="edit_hint_time">Time</string>
    <string name="desc_hint_local">Local</string>
    <string name="edit_hint_local">local</string>
    <string name="desc_fuel">Fuel type</string>
    <string name="edit_hint_fuel">Fuel</string>
    <string name="desc_totalCost">Total Cost</string>
    <string name="edit_hint_totalCost">$</string>
    <string name="edit_hint_cost">$/L*</string>
    <string name="desc_liter">Refueled litres</string>
    <string name="edit_hint_liter">liter*</string>
    <string name="action_delete">Delete</string>
    <string name="edit_carOwner">+Add Car Owner</string>
    <string name="desc_carOwner">Add Car Owner</string>
    <string name="desc_driverName">Add Driver</string>
    <string name="edit_hint_driverName">+Add Driver</string>
    <string name="edit_hint_driverName2">Add driver</string>
    <string name="edit_carOwner2">Add Owner</string>
</resources>