<?xml version="1.0" encoding="utf-8"?><!-- Create by Alea Sauer -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_photo_remove"
        style="@style/Dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_removePhoto" />

    <TextView
        android:id="@+id/dialog_photo_take"
        style="@style/Dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_takePhotoNew" />

    <TextView
        android:id="@+id/dialog_photo_choose"
        style="@style/Dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_choosePhotoNew" />
</LinearLayout>