<?xml version="1.0" encoding="utf-8"?><!-- Create by Alea Sauer -->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="de.gruschtelapps.fh_maa_refuelpair.views.activities.add.NewRefuelActivity"
    tools:showIn="@layout/activity_new_refuel">
    <!-- Date & Time -->
    <ImageView
        android:id="@+id/image_newRefuel_Date"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/ic_calender_black_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/conatiner_newRefuel_DateTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/conatiner_newRefuel_DateTime"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:id="@+id/conatiner_newRefuel_DateTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_newRefuel_Date"
        app:layout_constraintTop_toTopOf="parent">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/text_newRefuel_Date"
            style="@style/SingleLine.NonInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:contentDescription="@string/desc_date"
            android:hint="@string/edit_hint_date"
            android:inputType="date"
            android:onClick="onClick"
            app:met_floatingLabel="normal"
            app:met_floatingLabelText="@string/edit_hint_date"
            tools:ignore="Autofill,ContentDescription" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/text_newRefuel_Date2"
            style="@style/SingleLine.NonInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:contentDescription="@string/desc_time"
            android:hint="@string/edit_hint_time"
            android:inputType="none"
            android:onClick="onClick"
            app:met_floatingLabel="normal"
            app:met_floatingLabelText="@string/edit_hint_time"
            tools:ignore="Autofill,ContentDescription" />
    </LinearLayout>

    <!-- Odometer -->
    <ImageView
        android:id="@+id/image_newRefuel_odometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:src="@drawable/ic_odometer_black_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_newRefuel_odometer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_newRefuel_odometer"
        tools:ignore="ContentDescription" />


    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/text_newRefuel_odometer"
        style="@style/SingleLine"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/desc_hint_odometer"
        android:hint="@string/edit_hint_odometer"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/text_newRefuel_odometerValue"
        app:layout_constraintStart_toEndOf="@+id/image_newRefuel_odometer"
        app:layout_constraintTop_toBottomOf="@+id/conatiner_newRefuel_DateTime"
        app:met_floatingLabel="normal"
        app:met_floatingLabelText="@string/edit_hint_odometer"
        app:met_helperText="@string/edit_helper_required"
        app:met_helperTextAlwaysShown="true"
        tools:ignore="Autofill,ContentDescription" />

    <TextView
        android:id="@+id/text_newRefuel_odometerValue"
        style="@style/SingleLine.NonInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:text="@string/value_odometerKM"
        app:layout_constraintBottom_toBottomOf="@+id/text_newRefuel_odometer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_newRefuel_odometer"
        tools:ignore="Autofill,ContentDescription" />

    <!-- Local -->
    <ImageView
        android:id="@+id/image_newRefuel_local"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:src="@drawable/ic_pin_black_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_newRefuel_local"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_newRefuel_local"
        tools:ignore="ContentDescription" />


    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/text_newRefuel_local"
        style="@style/SingleLine"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/desc_hint_local"
        android:hint="@string/edit_hint_local"
        android:inputType="textPostalAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_newRefuel_local"
        app:layout_constraintTop_toBottomOf="@+id/text_newRefuel_odometer"
        app:met_floatingLabel="normal"
        app:met_floatingLabelText="@string/edit_hint_local"
        tools:ignore="Autofill,ContentDescription" />

    <!-- Fuel -->
    <ImageView
        android:id="@+id/image_newRefuel_fuel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:src="@drawable/ic_petrol_black_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_newRefuel_fuel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_newRefuel_fuel"
        tools:ignore="ContentDescription" />


    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/text_newRefuel_fuel"
        style="@style/SingleLine.NonInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/desc_fuel"
        android:hint="@string/edit_hint_fuel"
        android:inputType="number"
        android:onClick="onClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_newRefuel_fuel"
        app:layout_constraintTop_toBottomOf="@+id/text_newRefuel_local"
        app:met_floatingLabel="normal"
        app:met_floatingLabelText="@string/edit_hint_fuel"
        tools:ignore="Autofill,ContentDescription" />

    <!-- Cost -->
    <ImageView
        android:id="@+id/image_newRefuel_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:src="@drawable/ic_refuel_black_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/container_newRefuel_cost"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/container_newRefuel_cost"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:id="@+id/container_newRefuel_cost"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_newRefuel_cost"
        app:layout_constraintTop_toBottomOf="@+id/text_newRefuel_fuel">


        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/text_newRefuel_costLiter"
            style="@style/SingleLine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:contentDescription="@string/desc_liter"
            android:hint="@string/edit_hint_liter"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:met_floatingLabel="normal"
            app:met_floatingLabelText="@string/edit_hint_liter"
            app:met_helperText="@string/edit_helper_required"
            app:met_helperTextAlwaysShown="true"
            tools:ignore="Autofill,ContentDescription" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/text_newRefuel_costCost"
            style="@style/SingleLine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:contentDescription="@string/desc_cost"
            android:hint="@string/edit_hint_cost"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_newRefuel_cost"
            app:layout_constraintTop_toBottomOf="@+id/text_newRefuel_fuel"
            app:met_floatingLabel="normal"
            app:met_floatingLabelText="@string/edit_hint_cost"
            app:met_helperText="@string/edit_helper_required"
            app:met_helperTextAlwaysShown="true"
            tools:ignore="Autofill,ContentDescription" />

        <TextView
            android:id="@+id/text_newRefuel_costTotalCost"
            style="@style/SingleLine.NonInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:contentDescription="@string/desc_totalCost"
            android:gravity="end"
            android:hint="@string/edit_hint_totalCost"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_newRefuel_cost"
            app:layout_constraintTop_toBottomOf="@+id/text_newRefuel_fuel"
            tools:ignore="Autofill,ContentDescription" />
    </LinearLayout>


    <Button
        android:id="@+id/text_newRefuel_delete"
        style="@style/Suppose"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/action_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_newRefuel_cost" />


</android.support.constraint.ConstraintLayout>
